Checkpoint benchmark parity campaign
Preserve the accumulated implementation, tests, and retained benchmark evidence from the July parity investigation.